--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     background-color: black;
     color: white;
   }
+
+  .container-fluid {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
   #map {
     height: 100%;
     width: 100%;
