--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="leaflet-top leaflet-right">
             <select id="variable" class="form-select">
             <option value="mixed_layer_thickness">mixed_layer_thickness</option>
-            <option value="ssh">ssh</option>
+            <option value="ssh">sea surface height</option>
             
             </select>
         </div>
